--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-select": "^5.0.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
