--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-api": "orval --config ./orval.config.js"
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "formik": "^2.2.9",
     "next": "11.1.2",
+    "orval": "^6.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-query": "^3.24.4",
     "react-select": "^5.0.0",
     "yup": "^0.32.9"
   },
