--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "17.0.2",
     "react-query": "^3.24.4",
     "react-select": "^5.0.0",
+    "react-toastify": "^8.0.3",
     "yup": "^0.32.9"
   },
   "devDependencies": {
